feat: Enhance question bank management features
This commit introduces several enhancements to the question bank management system.

Key changes include:
- **Internationalization:** Updated the application title to "个人数学题库" for better localization.
- **UI Refinements:** Introduced a subtle red tint background color for a more distinct visual style.
- **Type System Improvements:**
    - Introduced `QuestionType` enum to categorize questions (SingleChoice, MultipleChoice, FillInBlank, Solution).
    - Redefined `KnowledgePointNode` and `SubPoint` for a more structured categorization of knowledge points.
    - Added `User` interface and related fields to `Question` for authorship tracking.
- **Gemini Service Update:**
    - Removed the retry instruction from `geminiService.ts` for a cleaner prompt.
    - Ensured API key is correctly loaded from environment variables.
    - Refactored `performOCR` to use `generateContent` with `systemInstruction` and proper `contents` structure.
- **Question Card Component:**
    - Added `currentUserId` prop to `QuestionCard` to determine if the current user is the owner of the question.
    - Introduced styling for different question types and improved date formatting.
    - Implemented smart rendering for choice-based questions, including layout adjustments based on option length and content.
- **Storage Utilities:**
    - Updated `storage.ts` to align with the new `QuestionType` and user-related fields.
    - Implemented helper functions for formatting choice content and solution text, and calculating choice layout types.
- **App Navigation:** Added new views like 'userCenter', 'auth', and 'adminPanel' to the `AppView` type, paving the way for future user management features.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LaTeX Question Bank Manager</title>
+    <title>个人数学题库</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       window.MathJax = {
@@ -24,7 +24,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #f8fafc;
+        background-color: #fffafb; /* Subtle red tint background */
       }
       .mathjax-container .mjx-chtml {
         margin: 0 !important;
